# nix-playwright-poc

./: README.md  pyproject.toml  run_tests.sh  shell.nix
nix/: chromium-playwright.nix  firefox-playwright.nix  playwright-browsers.nix
src/: conftest.py  test_playwright_nix.py
